--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
-    <title>FAQ's | Shadow | Architecture & Interior Design HTML Template | ThemeForest</title>
+    <title>FAQ's | Shadow | Architecture & Interior Design</title>
 
     <!--Favicon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
