--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
-    <title>About | Shadow | Architecture & Interior Design</title>
+    <title>About | Shadow | Architecture & Interior Design & Builders</title>
 
     <!--Favicon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -85,15 +85,15 @@
                                             <ul class="sub-menu">
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="team.html">Our Team</a></li>
+                                                <!-- <li><a href="team.html">Our Team</a></li>
 
                                                 <li><a href="testimonial.html">Testimonials</a></li>
                                                 <li><a href="process.html">Our Process</a></li>
-                                                <li><a href="faq.html">FAQs</a></li>
+                                                <!-- <li><a href="faq.html">FAQs</a></li> -->
                                             </ul>
                                         </li>
-                                        <li><a class="navlink" href="#">Projects</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./project-standard.html">Projects</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="project-standard.html">Standard</a></li>
                                                 <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                 <li><a href="project-grid.html">Grid</a></li>
@@ -101,14 +101,14 @@
                                                 <li><a href="project-masonry.html">Masonry</a></li>
                                                 <li><a href="project-slider.html">Slider</a></li>
                                                 <li><a href="project-details.html">Project Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a class="navlink" href="#">Blog</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./blog.html">Blog</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blogs</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
                                         <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -152,15 +152,15 @@
                                                     <ul class="sub-menu">
                                                         <li><a href="about.html">About Us</a></li>
                                                         <li><a href="services.html">Services</a></li>
-                                                        <li><a href="team.html">Our Team</a></li>
+                                                        <!-- <li><a href="team.html">Our Team</a></li>
 
-                                                        <li><a href="testimonial.html">Testimonials</a></li>
+                                                        <li><a href="testimonial.html">Testimonials</a></li> -->
                                                         <li><a href="process.html">Our Process</a></li>
-                                                        <li><a href="faq.html">FAQs</a></li>
+                                                        <!-- <li><a href="faq.html">FAQs</a></li> -->
                                                     </ul>
                                                 </li>
-                                                <li><a class="has-arrow" href="#">projects</a>
-                                                    <ul class="sub-menu">
+                                                <li><a class="" href="./project-standard.html">projects</a>
+                                                    <!-- <ul class="sub-menu">
                                                         <li><a href="project-standard.html">Standard</a></li>
                                                         <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                         <li><a href="project-grid.html">Grid</a></li>
@@ -168,7 +168,7 @@
                                                         <li><a href="project-masonry.html">Masonry</a></li>
                                                         <li><a href="project-slider.html">Slider</a></li>
                                                         <li><a href="project-details.html">Project Details</a></li>
-                                                    </ul>
+                                                    </ul> -->
                                                 </li>
                                                 <li><a class="has-arrow" href="#">Blog</a>
                                                     <ul class="sub-menu">
@@ -183,7 +183,7 @@
                                         <div class="action-bar">
                                             <a href="mailto:info@Shadow.com"><i
                                                     class="las la-envelope"></i>info@Shadow.com</a>
-                                            <a href="tel:123-456-7890"><i class="fal fa-phone"></i>123-456-7890</a>
+                                            <a href="tel:1621173556"><i class="fal fa-phone"></i>01621173556</a>
                                             <a href="contact.html" class="theme-btn">Contact Us</a>
                                         </div>
                                     </div>
@@ -217,7 +217,8 @@
                     </div>
                 </div>
                 <div class="social-area-wrap">
-                    <a href="#"><i class="lab la-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/shadowdesignandbuild" target="_blank"><i
+                            class="lab la-facebook-f"></i></a>
                     <a href="#"><i class="lab la-instagram"></i></a>
                     <a href="#"><i class="lab la-linkedin-in"></i></a>
                     <a href="#"><i class="lab la-skype"></i></a>
@@ -268,28 +269,33 @@
                                 </div>
                             </div>
                             <div class="about-content-wrap">
-                                <h5>Shadow was founded out of a shared desire to create spaces that feel as good as they
-                                    look — honest, balanced, and deeply personal. With a foundation in architecture and
-                                    product design, the studio connects people to their environments through refined,
-                                    purposeful design.</h5>
-                                <p>Every project begins with listening. We take the time to understand daily rhythms,
-                                    personal values, and individual style. From that, we shape tailored interiors that
-                                    reflect who you are — spaces that work quietly, beautifully, & intuitively.</p>
-                                <p>We oversee every aspect of your interior design project — from initial concept to
-                                    final installation.</p>
+                                <h5>Shadow Architects & Builders is a creative design and construction firm built on
+                                    friendship, passion, and shared vision. Founded by five partners, we bring together
+                                    diverse expertise to deliver innovative architectural design, smart interiors, and
+                                    high-quality construction solutions.</h5>
+                                <p>Our philosophy is simple: design with purpose, build with integrity, and deliver with
+                                    excellence. From homes that reflect personal stories to commercial spaces that
+                                    empower businesses, we shape environments that inspire.
+                                </p>
+                                <p>With a balance of modern design thinking and practical execution, we are committed to
+                                    sustainability, precision, and client satisfaction. Every project we undertake is
+                                    more than just construction—it’s the realization of dreams, crafted with care.
+                                </p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 order-1 order-md-2">
                             <div class="about-img-wrap">
-                                <img src="assets/img/about/about-page-img.jpg" alt="">
+                                <img src="assets/img/about/about-4.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+
+
             <!-- Timeline Section -->
-            <div class="timeline-section section-padding pt-0">
+            <!-- <div class="timeline-section section-padding pt-0">
                 <div class="container">
                     <div class="row">
                         <div class="timeline-wrapper">
@@ -305,7 +311,7 @@
                                         <img src="assets/img/timeline/1.jpg" alt="">
                                     </div>
                                     <div class="timeline-content-wrap">
-                                        <span class="timeline-date">2010</span>
+                                        <span class="timeline-date">2025</span>
                                         <h5 class="timeline-title">Founding Year</h5>
                                         <p class="timeline-text">Inception: Florz was founded by a team of flooring
                                             enthusiasts with a vision to redefine flooring solutions for homeowners and
@@ -357,7 +363,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- About Section  -->
             <div class="about-section section-padding border-top">
@@ -416,7 +422,7 @@
             </div>
 
             <!-- Counter Section -->
-            <div class="counter-section section-padding pt-0 pb-60">
+            <!-- <div class="counter-section section-padding pt-0 pb-60">
                 <div class="container">
                     <div class="row gx-5">
                         <div class="col-lg-3 col-md-3 col-sm-6">
@@ -449,7 +455,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Video Section  -->
             <div class="video-section">
@@ -462,8 +468,109 @@
                 </div>
             </div>
 
+            <!-- Process Section -->
+            <div class="process-section dark-bg section-padding">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-4">
+                            <div class="section-title">
+                                <div>
+                                    <h6>How We Do</h6>
+                                    <h2>Our Process</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row mt-40">
+                        <div class="process-wrapper owl-carousel">
+                            <div class="single-process-item">
+                                <div class="process-up">
+                                    <div class="process-num">
+                                        <span>01</span>
+                                    </div>
+                                    <div class="process-icon">
+                                        <i class="las la-dot-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="process-down">
+                                    <p>We begin with a detailed consultation to understand your vision,
+                                        requirements,budget, and timeline, ensuring clarity, alignment, and a strong
+                                        foundation for a
+                                        successful architectural journey.</p>
+                                    <h4>Initial Consultation</h4>
+                                </div>
+                            </div>
+                            <div class="single-process-item">
+                                <div class="process-up">
+                                    <div class="process-num">
+                                        <span>02</span>
+                                    </div>
+                                    <div class="process-icon">
+                                        <i class="las la-dot-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="process-down">
+                                    <p>Our team develops innovative, functional, and aesthetically refined design
+                                        concepts that translate your ideas into strategic architectural solutions,
+                                        balancing creativity, practicality, and long-term sustainability.</p>
+                                    <h4>Design Concept</h4>
+                                </div>
+                            </div>
+                            <div class="single-process-item">
+                                <div class="process-up">
+                                    <div class="process-num">
+                                        <span>03</span>
+                                    </div>
+                                    <div class="process-icon">
+                                        <i class="las la-dot-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="process-down">
+                                    <p>We execute construction with precision, quality craftsmanship, and strict
+                                        supervision, ensuring timelines, budgets, and design integrity are maintained
+                                        throughout every stage of development.</p>
+                                    <h4>Construction</h4>
+                                </div>
+                            </div>
+                            <div class="single-process-item">
+                                <div class="process-up">
+                                    <div class="process-num">
+                                        <span>04</span>
+                                    </div>
+                                    <div class="process-icon">
+                                        <i class="las la-dot-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="process-down">
+                                    <p>Comprehensive final walkthrough ensures every detail meets our standards and your
+                                        expectations, addressing refinements and delivering a flawless, ready-to-use
+                                        completed project.</p>
+                                    <h4>Final Work-Through</h4>
+                                </div>
+                            </div>
+                            <div class="single-process-item">
+                                <div class="process-up">
+                                    <div class="process-num">
+                                        <span>05</span>
+                                    </div>
+                                    <div class="process-icon">
+                                        <i class="las la-dot-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="process-down">
+                                    <p>Our commitment continues beyond completion through dedicated follow-up support,
+                                        ensuring performance, satisfaction, and long-term and value while maintaining
+                                        trusted client relationships.</p>
+                                    <h4>Follow Up</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Team Section  -->
-            <div id="team-2" class="team-section section-padding pb-70">
+            <!-- <div id="team-2" class="team-section section-padding pb-70">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6">
@@ -558,7 +665,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Footer Area -->
             <footer class="footer-area">
