--- a/process.html
+++ b/process.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
-    <title>Process | Shadow | Architecture & Interior Design</title>
+    <title>Process | Shadow | Architecture & Interior Design & Builders</title>
 
     <!--Favicon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -84,15 +84,15 @@
                                             <ul class="sub-menu">
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="team.html">Our Team</a></li>
+                                                <!-- <li><a href="team.html">Our Team</a></li>
 
                                                 <li><a href="testimonial.html">Testimonials</a></li>
                                                 <li><a href="process.html">Our Process</a></li>
-                                                <li><a href="faq.html">FAQs</a></li>
+                                                <!-- <li><a href="faq.html">FAQs</a></li> -->
                                             </ul>
                                         </li>
-                                        <li><a class="navlink" href="#">Projects</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./project-standard.html">Projects</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="project-standard.html">Standard</a></li>
                                                 <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                 <li><a href="project-grid.html">Grid</a></li>
@@ -100,14 +100,14 @@
                                                 <li><a href="project-masonry.html">Masonry</a></li>
                                                 <li><a href="project-slider.html">Slider</a></li>
                                                 <li><a href="project-details.html">Project Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a class="navlink" href="#">Blog</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./blog.html">Blog</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blogs</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
                                         <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -151,15 +151,15 @@
                                                     <ul class="sub-menu">
                                                         <li><a href="about.html">About Us</a></li>
                                                         <li><a href="services.html">Services</a></li>
-                                                        <li><a href="team.html">Our Team</a></li>
+                                                        <!-- <li><a href="team.html">Our Team</a></li>
 
-                                                        <li><a href="testimonial.html">Testimonials</a></li>
+                                                        <li><a href="testimonial.html">Testimonials</a></li> -->
                                                         <li><a href="process.html">Our Process</a></li>
-                                                        <li><a href="faq.html">FAQs</a></li>
+                                                        <!-- <li><a href="faq.html">FAQs</a></li> -->
                                                     </ul>
                                                 </li>
-                                                <li><a class="has-arrow" href="#">projects</a>
-                                                    <ul class="sub-menu">
+                                                <li><a class="" href="./project-standard.html">projects</a>
+                                                    <!-- <ul class="sub-menu">
                                                         <li><a href="project-standard.html">Standard</a></li>
                                                         <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                         <li><a href="project-grid.html">Grid</a></li>
@@ -167,7 +167,7 @@
                                                         <li><a href="project-masonry.html">Masonry</a></li>
                                                         <li><a href="project-slider.html">Slider</a></li>
                                                         <li><a href="project-details.html">Project Details</a></li>
-                                                    </ul>
+                                                    </ul> -->
                                                 </li>
                                                 <li><a class="has-arrow" href="#">Blog</a>
                                                     <ul class="sub-menu">
@@ -182,7 +182,7 @@
                                         <div class="action-bar">
                                             <a href="mailto:info@Shadow.com"><i
                                                     class="las la-envelope"></i>info@Shadow.com</a>
-                                            <a href="tel:123-456-7890"><i class="fal fa-phone"></i>123-456-7890</a>
+                                            <a href="tel:1621173556"><i class="fal fa-phone"></i>01621173556</a>
                                             <a href="contact.html" class="theme-btn">Contact Us</a>
                                         </div>
                                     </div>
@@ -216,7 +216,8 @@
                     </div>
                 </div>
                 <div class="social-area-wrap">
-                    <a href="#"><i class="lab la-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/shadowdesignandbuild" target="_blank"><i
+                            class="lab la-facebook-f"></i></a>
                     <a href="#"><i class="lab la-instagram"></i></a>
                     <a href="#"><i class="lab la-linkedin-in"></i></a>
                     <a href="#"><i class="lab la-skype"></i></a>
@@ -302,8 +303,10 @@
                                     </div>
                                 </div>
                                 <div class="process-down">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vitae in quam,
-                                        sed neque ex necessitatibus ipsam, atque vel quod temporibus expedita.</p>
+                                    <p>We begin with a detailed consultation to understand your vision,
+                                        requirements,budget, and timeline, ensuring clarity, alignment, and a strong
+                                        foundation for a
+                                        successful architectural journey.</p>
                                     <h4>Initial Consultation</h4>
                                 </div>
                             </div>
@@ -317,8 +320,9 @@
                                     </div>
                                 </div>
                                 <div class="process-down">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vitae in quam,
-                                        sed neque ex necessitatibus ipsam, atque vel quod temporibus expedita.</p>
+                                    <p>Our team develops innovative, functional, and aesthetically refined design
+                                        concepts that translate your ideas into strategic architectural solutions,
+                                        balancing creativity, practicality, and long-term sustainability.</p>
                                     <h4>Design Concept</h4>
                                 </div>
                             </div>
@@ -332,8 +336,9 @@
                                     </div>
                                 </div>
                                 <div class="process-down">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vitae in quam,
-                                        sed neque ex necessitatibus ipsam, atque vel quod temporibus expedita.</p>
+                                    <p>We execute construction with precision, quality craftsmanship, and strict
+                                        supervision, ensuring timelines, budgets, and design integrity are maintained
+                                        throughout every stage of development.</p>
                                     <h4>Construction</h4>
                                 </div>
                             </div>
@@ -347,8 +352,9 @@
                                     </div>
                                 </div>
                                 <div class="process-down">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vitae in quam,
-                                        sed neque ex necessitatibus ipsam, atque vel quod temporibus expedita.</p>
+                                    <p>Comprehensive final walkthrough ensures every detail meets our standards and your
+                                        expectations, addressing refinements and delivering a flawless, ready-to-use
+                                        completed project.</p>
                                     <h4>Final Work-Through</h4>
                                 </div>
                             </div>
@@ -362,8 +368,9 @@
                                     </div>
                                 </div>
                                 <div class="process-down">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, vitae in quam,
-                                        sed neque ex necessitatibus ipsam, atque vel quod temporibus expedita.</p>
+                                    <p>Our commitment continues beyond completion through dedicated follow-up support,
+                                        ensuring performance, satisfaction, and long-term and value while maintaining
+                                        trusted client relationships.</p>
                                     <h4>Follow Up</h4>
                                 </div>
                             </div>
@@ -383,7 +390,7 @@
             </div>
 
             <!-- Process Section -->
-            <div class="process-section section-padding pb-100">
+            <!-- <div class="process-section section-padding pb-100">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-6 col-lg-5">
@@ -451,7 +458,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Footer Area -->
             <footer class="footer-area">
