--- a/project-masonry.html
+++ b/project-masonry.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
-    <title>Project - Masonry | Shadow | Architecture & Interior Design</title>
+    <title>Project - Masonry | Shadow | Architecture & Interior Design & Builders</title>
 
     <!--Favicon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -84,15 +84,15 @@
                                             <ul class="sub-menu">
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="team.html">Our Team</a></li>
+                                                <!-- <li><a href="team.html">Our Team</a></li>
 
                                                 <li><a href="testimonial.html">Testimonials</a></li>
                                                 <li><a href="process.html">Our Process</a></li>
-                                                <li><a href="faq.html">FAQs</a></li>
+                                                <!-- <li><a href="faq.html">FAQs</a></li> -->
                                             </ul>
                                         </li>
-                                        <li><a class="navlink" href="#">Projects</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./project-standard.html">Projects</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="project-standard.html">Standard</a></li>
                                                 <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                 <li><a href="project-grid.html">Grid</a></li>
@@ -100,14 +100,14 @@
                                                 <li><a href="project-masonry.html">Masonry</a></li>
                                                 <li><a href="project-slider.html">Slider</a></li>
                                                 <li><a href="project-details.html">Project Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a class="navlink" href="#">Blog</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./blog.html">Blog</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blogs</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
                                         <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -151,15 +151,15 @@
                                                     <ul class="sub-menu">
                                                         <li><a href="about.html">About Us</a></li>
                                                         <li><a href="services.html">Services</a></li>
-                                                        <li><a href="team.html">Our Team</a></li>
+                                                        <!-- <li><a href="team.html">Our Team</a></li>
 
-                                                        <li><a href="testimonial.html">Testimonials</a></li>
+                                                        <li><a href="testimonial.html">Testimonials</a></li> -->
                                                         <li><a href="process.html">Our Process</a></li>
-                                                        <li><a href="faq.html">FAQs</a></li>
+                                                        <!-- <li><a href="faq.html">FAQs</a></li> -->
                                                     </ul>
                                                 </li>
-                                                <li><a class="has-arrow" href="#">projects</a>
-                                                    <ul class="sub-menu">
+                                                <li><a class="" href="./project-standard.html">projects</a>
+                                                    <!-- <ul class="sub-menu">
                                                         <li><a href="project-standard.html">Standard</a></li>
                                                         <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                         <li><a href="project-grid.html">Grid</a></li>
@@ -167,7 +167,7 @@
                                                         <li><a href="project-masonry.html">Masonry</a></li>
                                                         <li><a href="project-slider.html">Slider</a></li>
                                                         <li><a href="project-details.html">Project Details</a></li>
-                                                    </ul>
+                                                    </ul> -->
                                                 </li>
                                                 <li><a class="has-arrow" href="#">Blog</a>
                                                     <ul class="sub-menu">
@@ -182,7 +182,7 @@
                                         <div class="action-bar">
                                             <a href="mailto:info@Shadow.com"><i
                                                     class="las la-envelope"></i>info@Shadow.com</a>
-                                            <a href="tel:123-456-7890"><i class="fal fa-phone"></i>123-456-7890</a>
+                                            <a href="tel:1621173556"><i class="fal fa-phone"></i>01621173556</a>
                                             <a href="contact.html" class="theme-btn">Contact Us</a>
                                         </div>
                                     </div>
@@ -216,7 +216,8 @@
                     </div>
                 </div>
                 <div class="social-area-wrap">
-                    <a href="#"><i class="lab la-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/shadowdesignandbuild" target="_blank"><i
+                            class="lab la-facebook-f"></i></a>
                     <a href="#"><i class="lab la-instagram"></i></a>
                     <a href="#"><i class="lab la-linkedin-in"></i></a>
                     <a href="#"><i class="lab la-skype"></i></a>
