--- a/project-standard.html
+++ b/project-standard.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
-    <title>Project - Standard | Shadow | Architecture & Interior Design</title>
+    <title>Project - Standard | Shadow | Architecture & Interior Design & Builders</title>
 
     <!--Favicon-->
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -84,15 +84,15 @@
                                             <ul class="sub-menu">
                                                 <li><a href="about.html">About Us</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="team.html">Our Team</a></li>
+                                                <!-- <li><a href="team.html">Our Team</a></li>
 
                                                 <li><a href="testimonial.html">Testimonials</a></li>
                                                 <li><a href="process.html">Our Process</a></li>
-                                                <li><a href="faq.html">FAQs</a></li>
+                                                <!-- <li><a href="faq.html">FAQs</a></li> -->
                                             </ul>
                                         </li>
-                                        <li><a class="navlink" href="#">Projects</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./project-standard.html">Projects</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="project-standard.html">Standard</a></li>
                                                 <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                 <li><a href="project-grid.html">Grid</a></li>
@@ -100,14 +100,14 @@
                                                 <li><a href="project-masonry.html">Masonry</a></li>
                                                 <li><a href="project-slider.html">Slider</a></li>
                                                 <li><a href="project-details.html">Project Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a class="navlink" href="#">Blog</a>
-                                            <ul class="sub-menu">
+                                        <li><a class="navlink" href="./blog.html">Blog</a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blogs</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
                                         <li><a class="navlink" href="contact.html">Contact</a></li>
@@ -151,15 +151,15 @@
                                                     <ul class="sub-menu">
                                                         <li><a href="about.html">About Us</a></li>
                                                         <li><a href="services.html">Services</a></li>
-                                                        <li><a href="team.html">Our Team</a></li>
+                                                        <!-- <li><a href="team.html">Our Team</a></li>
 
-                                                        <li><a href="testimonial.html">Testimonials</a></li>
+                                                        <li><a href="testimonial.html">Testimonials</a></li> -->
                                                         <li><a href="process.html">Our Process</a></li>
-                                                        <li><a href="faq.html">FAQs</a></li>
+                                                        <!-- <li><a href="faq.html">FAQs</a></li> -->
                                                     </ul>
                                                 </li>
-                                                <li><a class="has-arrow" href="#">projects</a>
-                                                    <ul class="sub-menu">
+                                                <li><a class="" href="./project-standard.html">projects</a>
+                                                    <!-- <ul class="sub-menu">
                                                         <li><a href="project-standard.html">Standard</a></li>
                                                         <li><a href="project-metro.html">Metro Fullwidth</a></li>
                                                         <li><a href="project-grid.html">Grid</a></li>
@@ -167,7 +167,7 @@
                                                         <li><a href="project-masonry.html">Masonry</a></li>
                                                         <li><a href="project-slider.html">Slider</a></li>
                                                         <li><a href="project-details.html">Project Details</a></li>
-                                                    </ul>
+                                                    </ul> -->
                                                 </li>
                                                 <li><a class="has-arrow" href="#">Blog</a>
                                                     <ul class="sub-menu">
@@ -182,7 +182,7 @@
                                         <div class="action-bar">
                                             <a href="mailto:info@Shadow.com"><i
                                                     class="las la-envelope"></i>info@Shadow.com</a>
-                                            <a href="tel:123-456-7890"><i class="fal fa-phone"></i>123-456-7890</a>
+                                            <a href="tel:1621173556"><i class="fal fa-phone"></i>01621173556</a>
                                             <a href="contact.html" class="theme-btn">Contact Us</a>
                                         </div>
                                     </div>
@@ -216,7 +216,8 @@
                     </div>
                 </div>
                 <div class="social-area-wrap">
-                    <a href="#"><i class="lab la-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/shadowdesignandbuild" target="_blank"><i
+                            class="lab la-facebook-f"></i></a>
                     <a href="#"><i class="lab la-instagram"></i></a>
                     <a href="#"><i class="lab la-linkedin-in"></i></a>
                     <a href="#"><i class="lab la-skype"></i></a>
@@ -262,75 +263,74 @@
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <a href="project-details.html" class="single-project-wrapper">
                                 <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-1.jpg" alt="">
+                                    <img src="assets/img/test-2.png" alt="">
                                 </div>
                                 <div class="project-title">
-                                    <h3>Industrial Chic</h3>
-                                    <h6>Architecture</h6>
+                                    <h3>AL Baraka Group</h3>
+                                    <h6>Office Renovation</h6>
                                 </div>
                             </a>
                         </div>
 
                         <div class="col-xl-4 col-lg-4 col-md-6">
-                            <a href="project-details.html" class="single-project-wrapper">
+                            <a href="project-details-1.html" class="single-project-wrapper">
                                 <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-2.jpg" alt="">
+                                    <img src="assets/img/project/img-1.png" alt="">
                                 </div>
                                 <div class="project-title">
-                                    <h3>Restaurant Inn</h3>
+                                    <h3>Beaking Bread</h3>
+                                    <h6>Restuarent Interior</h6>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-xl-4 col-lg-4 col-md-6">
+                            <a href="project-details-2.html" class="single-project-wrapper">
+                                <div class="project-img">
+                                    <img src="assets/img/project/img-2.png" alt="">
+                                </div>
+                                <div class="project-title">
+                                    <h3>Humayun Residence</h3>
                                     <h6>Interior</h6>
                                 </div>
                             </a>
                         </div>
 
                         <div class="col-xl-4 col-lg-4 col-md-6">
-                            <a href="project-details.html" class="single-project-wrapper">
+                            <a href="project-details-test.html" class="single-project-wrapper">
                                 <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-3.jpg" alt="">
+                                    <img src="assets/img/project/img-3.png" alt="">
                                 </div>
                                 <div class="project-title">
-                                    <h3>Parkview Resort</h3>
+                                    <h3>University of Dhaka</h3>
+                                    <h6>ClassRoom Renovation</h6>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-xl-4 col-lg-4 col-md-6">
+                            <a href="project-details-test2.html" class="single-project-wrapper">
+                                <div class="project-img">
+                                    <img src="assets/img/project/img-5.jpg" alt="">
+                                </div>
+                                <div class="project-title">
+                                    <h3>Commander Bari Mosque</h3>
+                                    <h6>Visualisation</h6>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-xl-4 col-lg-4 col-md-6">
+                            <a href="project-details-3.html" class="single-project-wrapper">
+                                <div class="project-img">
+                                    <img src="assets/img/project/img-4.png" alt="">
+                                </div>
+                                <div class="project-title">
+                                    <h3>Salman Resident</h3>
                                     <h6>Interior</h6>
                                 </div>
                             </a>
                         </div>
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-                            <a href="project-details.html" class="single-project-wrapper">
-                                <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-8.jpg" alt="">
-                                </div>
-                                <div class="project-title">
-                                    <h3>Peninsula Villa</h3>
-                                    <h6>Residence</h6>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-                            <a href="project-details.html" class="single-project-wrapper">
-                                <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-5.jpg" alt="">
-                                </div>
-                                <div class="project-title">
-                                    <h3>Lakefront Retreat</h3>
-                                    <h6>Architecture</h6>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-                            <a href="project-details.html" class="single-project-wrapper">
-                                <div class="project-img">
-                                    <img src="assets/img/project/project-standard/2-6.jpg" alt="">
-                                </div>
-                                <div class="project-title">
-                                    <h3>Floor Design</h3>
-                                    <h6>Interior</h6>
-                                </div>
-                            </a>
-                        </div>
-
                     </div>
                 </div>
             </div>
