--- a/about.html
+++ b/about.html
@@ -378,10 +378,11 @@
                                     </div>
                                 </div>
                                 <div class="p-animation">
-                                    <p>We craft premium digital work for web, mobile and experiential with creative
-                                        agencies and global brands alike – putting passion. Since the 1980s, as the
-                                        complexity of buildings began to increase, the field of architecture
-                                        technological expertise.</p>
+                                    <p>Shadow Architects & Builders is a creative design and construction firm built on
+                                        friendship, passion, and shared vision. Founded by five partners, we bring
+                                        together diverse expertise to deliver innovative architectural design, smart
+                                        interiors, and high-quality construction solutions.
+                                    </p>
 
                                 </div>
 
