--- a/construction.html
+++ b/construction.html
@@ -229,14 +229,14 @@
 
         <div id="smooth-content">
 
-            <!-- Breadcrumb Area -->
+            <!-- Breadcrumb Area
             <div class="breadcrumb-bg project-bg">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="breadcrumb-title">
-                                <h1>Salman Residence</h1>
+                                <h1>Commander Bari Mosque</h1>
                             </div>
                         </div>
                     </div>
@@ -249,168 +249,20 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                <li class="breadcrumb-item"><a href="project-standard.html">Project</a></li>
+                                <li class="breadcrumb-item"><a href="project-metro.html">Project</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Project Details</li>
                             </ol>
                         </nav>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Project Details  -->
-            <div class="single-project-section pt-60 pb-60">
-                <div class="container">
-                    <div class="row">
-                        <div class="project-details-wrapper">
-                            <div class="row mt-60">
-                                <div class="col-xl-9">
-                                    <div class="project-details">
-                                        <h2>Project Overview</h2>
-                                        <p>The interior design of the "Salman Residence" is a prime example of modern
-                                            luxury residential design. The project successfully combines a
-                                            sophisticated, neutral color palette with bold accents, high-end materials,
-                                            and elegant detailing to create a timeless and opulent living space. The
-                                            design focuses on clean lines, symmetry, and strategic use of lighting to
-                                            enhance the feeling of grandeur and comfort.
-                                        </p>
-
-                                    </div>
-                                </div>
-                                <div class="col-xl-3">
-                                    <div class="project-info-wrap">
-                                        <div class="project-info">
-                                            <h6>Year:</h6>
-                                            <p>2025</p>
-                                        </div>
-                                        <div class="project-info">
-                                            <h6>Client:Resident</p>
-                                        </div>
-                                        <div class="project-info">
-                                            <h6>Architect:</h6>
-                                            <p>Hasanur Rahman</p>
-                                        </div>
-                                        <div class="project-info">
-                                            <h6>Location:</h6>
-                                            <p>Gulshan-2, Dhaka</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="project-details-img">
-                                <div class="row mt-30 g-4">
-                                    <div class="col-md-4">
-                                        <img src="assets/img/project/project-details-10.png" alt="">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <img src="assets/img/project/project-details-11.png" alt="">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <img src="assets/img/project/project-details-12.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Counter Section -->
-                            <div class="counter-section section-padding pt-60 pb-60">
-                                <div class="container">
-                                    <div class="row gx-5">
-                                        <div class="col-md-4 col-sm-6">
-                                            <div class="single-counter-box highlights">
-                                                <p class="counter-number"><span class="purecounter"
-                                                        data-purecounter-duration="1"
-                                                        data-purecounter-end="2600">2600</span></p>
-                                                <h6>Site Area</h6>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-6">
-                                            <div class="single-counter-box">
-                                                <p class="counter-number"><span class="purecounter"
-                                                        data-purecounter-duration="1"
-                                                        data-purecounter-end="2400">2400</span></p>
-                                                <h6>Project Space</h6>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-6">
-                                            <div class="single-counter-box">
-                                                <p class="counter-number"><span class="purecounter"
-                                                        data-purecounter-duration="1"
-                                                        data-purecounter-end="20">20</span><span
-                                                        class="operator">+</span></p>
-                                                <h6>Total Manpower</h6>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <h3>Design Concept</h3>
-                            <p><span class="text-white">Color Palette:</span>
-                                The design is built on a foundation of neutral tones, primarily cream, beige, and white,
-                                which creates a serene and spacious feel. This calm backdrop is punctuated with
-                                luxurious touches of gold and brass, along with the bold use of deep blue and black. The
-                                combination of light walls and dark, statement furniture provides a stunning visual
-                                contrast.
-
-
-                            </p>
-                            <p> <span class="text-white">Walls and Paneling:</span> A key feature
-                                throughout the residence is the use of wainscoting and wall molding. This classic
-                                architectural detail is updated with a modern twist, painted in a neutral, glossy
-                                finish. In the living room and hallway, these panels are a uniform cream, providing a
-                                textured and elegant backdrop. In the family living or a common area, a bold,
-                                large-format marble wall with striking black and white veining acts as a dramatic focal
-                                point, showcasing the project's high-end material selection.
-                            </p>
-                            <p><span class="text-white">Flooring:</span> The flooring varies to
-                                define different functional zones.
-
-                            </p>
-
-
-                            <p><span class="text-white"> Common Areas:</span> The hallways and main living
-                                spaces feature a spectacular geometric patterned marble floor in black and white. This
-                                bold pattern not only adds a high-end, classic feel but also creates a sense of
-                                direction and visual rhythm, guiding movement through the space.
-
-                            </p>
-                            <p>
-                                <span class="text-white">Living/Dining:</span> The living and dining
-                                areas feature light, polished marble or tile flooring. The family living area seems to
-                                have warm, polished wood flooring with a curved detail, which adds warmth and defines
-                                the more intimate space.
-
-
-
-                            </p>
-                            <p><span class="text-white">Lighting: </span>Lighting is used both
-                                functionally and as a key decorative element.
-
-
-                            </p>
-                            <p><span class="text-white"> Ceilings: </span>Recessed LED strip lighting
-                                is used to create a subtle glow within the ceiling coves, highlighting the gold and
-                                brass accents.
-
-
-                            </p>
-
-                            <h3>Conclusion</h3>
-                            <p>The "Salman Residence" project in Gulshan 01 is a showcase of luxurious and meticulous
-                                design, where every detail, from the selection of materials to the placement of
-                                lighting, contributes to an overall sense of refined elegance and a comfortable, modern
-                                lifestyle.</p>
-                            <p>The interior design of "Shomrat Residence" is a sophisticated and modern project that
-                                exudes an air of luxury and refined elegance. The design is characterized by its clean
-                                lines, strategic use of lighting, and a carefully curated palette of neutral tones with
-                                metallic accents. The overall aesthetic is a blend of contemporary style with classic,
-                                timeless elements, creating a home that is both visually stunning and highly functional.
-                            </p>
-                        </div>
-
-
-                    </div>
-
+            <section class="dark-bg">
+                <div class="sjd-under">
+                    <h1>Page Under Construction</h1>
                 </div>
-            </div>
+            </section>
 
             <!-- Footer Area -->
             <footer class="footer-area">
