--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                                             </ul> -->
                                         </li>
 
-                                        <li><a class="navlink" href="./blog.html">Blog</a>
+                                        <li><a class="navlink" href="./construction.html">Blog</a>
                                             <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blogs</a></li>
                                                 <li><a href="blog-details.html">Blog Details</a></li>
